data/diff_tests/wasmtime/br_if_IncorrectHandlingofControlFlowAcrossModuleBoundaries_2013.wast.bin.wast
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
    "\00\00\02\98\80\80\80\00\01\03\65\6e\76\10\6e\65"
    "\73\74\65\64\5f\6c\6f\6f\70\5f\66\75\6e\63\00\00"
    "\03\82\80\80\80\00\01\00\0a\91\80\80\80\00\01\8b"
    "\80\80\80\00\00\03\40\10\00\41\01\0d\00\0b\0b"
  )
""
)